# DPF_Unified

./: .dockerignore  .gitignore  .gitmodules  .python-experts-available.md  :memory:  =3.0.0  DPF_SIMULATOR_AGENT_TEAM_PROMPT.md  Dockerfile  Makefile  README.md  app.py  app_anim.py  app_calibrate.py  app_compare.py  app_engine.py  app_mhd.py  app_narrative.py  app_plots.py  app_sweep.py  app_validation.py  claude.md  compile_kernels.py  config.json  config_cylindrical.json  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  launch.json
.claude/commands/: benchmark-ai.md  build-athena.md  build-athenak.md  inverse-design.md  memory-status.md  metal-benchmark.md  metal-info.md  metal-optimize.md  metal-profile.md  physics.md  recall.md  remember.md  review-dpf.md  run-tests.md  session-resume.md  session-save.md  sweep.md  validate-dataset.md  verify-athenak.md  walrus-metal.md  walrus-predict.md  walrus-train.md  well-export.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ATHENAK_RESEARCH.md  ATHENA_BUILD.md  DPF_Simulation_Challenge_Full_APA.docx  LEDERMAN_NLR_PANEL_STUDY.md  PF1000_EXPERIMENTAL_VALIDATION.md  PHASE1_ASSESSMENT_REPORT.md  PHASE_R_DEBATE_VERDICT.md  PHD_DEBATE_10_VERDICT.md  PHD_DEBATE_11_VERDICT.md  PHD_DEBATE_12_VERDICT.md  PHD_DEBATE_13_VERDICT.md  PHD_DEBATE_14_VERDICT.md  PHD_DEBATE_15_VERDICT.md  PHD_DEBATE_16_VERDICT.md  PHD_DEBATE_17_VERDICT.md  PHD_DEBATE_18_VERDICT.md  PHD_DEBATE_19_VERDICT.md  PHD_DEBATE_20_VERDICT.md  PHD_DEBATE_21_VERDICT.md  PHD_DEBATE_22_VERDICT.md  PHD_DEBATE_23_VERDICT.md  PHD_DEBATE_24_VERDICT.md  PHD_DEBATE_25_VERDICT.md  PHD_DEBATE_26_VERDICT.md  PHD_DEBATE_27_VERDICT.md  PHD_DEBATE_28_VERDICT.md  PHD_DEBATE_29_VERDICT.md  PHD_DEBATE_30_VERDICT.md  PHD_DEBATE_31_VERDICT.md  PHD_DEBATE_35_VERDICT.md  PHD_DEBATE_36_VERDICT.md  PHD_DEBATE_37_VERDICT.md  PHD_DEBATE_38_VERDICT.md  PHD_DEBATE_39_VERDICT.md  PHD_DEBATE_3_FULL_PROJECT_VERDICT.md  PHD_DEBATE_40_VERDICT.md  PHD_DEBATE_41_VERDICT.md  PHD_DEBATE_42_VERDICT.md  PHD_DEBATE_43_VERDICT.md  (+30 more)
docs/gemini-research/: filamentation-3d-partial.txt  research-1773587723.md  research-1773587726.md  research-1773587729.md
docs/session_logs/: phase_z_log.md
examples/: 04_running_on_metal.ipynb
gui/: electron-builder.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.main.json  vite.config.ts
gui/scripts/: dev.sh
gui/src/main/: index.ts  preload.ts  server.ts
gui/src/renderer/: App.tsx  index.html  main.tsx  types.ts
gui/src/shared/: constants.ts
scripts/: active_learning_loop.py  analyze_regime.py  benchmark_the_well.py  build_athenak.sh  build_metal.sh  deploy_hf_spaces.sh  generate_training_data.py  run_pf1000.py  setup_athenak.sh  validate_scaling.py  walrus_e2e_test.py
src/dpf/: Troubleshooting.md  __init__.py  __main__.py  config.py  constants.py  engine.py  multi_shot.py  presets.py  species.py  units.py
src/dpf/ai/: Troubleshooting.md  __init__.py  _walrus_base.py  batch_runner.py  benchmark_validation.py  chat_router.py  confidence.py  dataset_validator.py  field_mapping.py  generate_data.py  hybrid_engine.py  instability_detector.py  inverse_design.py  models.py  preconditioner.py  realtime_server.py  surrogate.py  train_surrogate.py  well_exporter.py  well_loader.py
src/dpf/amr/: __init__.py
src/dpf/athena_wrapper/: __init__.py  athena_config.py  athena_engine.py
src/dpf/athena_wrapper/cpp/: CMakeLists.txt  athena_bindings.cpp
src/dpf/athenak_wrapper/: __init__.py  athenak_config.py  athenak_io.py  athenak_solver.py
src/dpf/atomic/: __init__.py  (+3 more)
tests/: conftest.py  test_athena_consolidated.py  test_athena_wrapper.py  test_briowu_metal_validation.py  test_calibration_consolidated.py  test_checkpoint.py  test_circuit.py  test_circuit_consolidated.py  test_collision.py  test_coupling.py  test_cylindrical.py  test_diagnostics.py  test_e2e_server.py  test_eos.py  test_experimental_overlay.py  test_fluid.py  test_infrastructure_consolidated.py  test_instability_tearing.py  test_integration.py  test_kinetic.py  test_lax_metal_validation.py  test_linear_wave_metal_convergence.py  test_metal_gpu_consolidated.py  test_metal_production.py  test_mhd_physics_integration.py  test_mhd_solver_consolidated.py  test_mhd_wave_metal_convergence.py  test_neutron_yield.py  test_ohmic_correction.py  test_orszag_tang_metal_validation.py  test_pb11_yield.py  test_pease_braginskii.py  test_pf1000_it_validation.py  test_pf1000_metal_coupled.py  test_phase12.py  test_phase13.py  test_phase15.py  test_phase16.py  test_phase17.py  test_phase_aa_validation_gaps.py  (+118 more)
tests/_archive/: test_bennett_validation.py  test_circuit.py  test_collision.py  test_double_rarefaction_metal_validation.py  test_dual_engine.py  test_engine_step.py  test_fluid.py  test_integration.py  test_ionization.py  test_metal_bremsstrahlung.py  test_mhd_wave_metal_convergence.py  test_pf1000_it_validation.py  test_pf1000_metal_coupled.py  test_phase13.py  test_phase14.py  test_phase16.py  test_phase_aa_circuit_fixes.py  test_phase_aa_validation_gaps.py  test_phase_ad_fmr_convergence.py  test_phase_ae_cross_device.py  test_phase_af_improvements.py  test_phase_af_reflected_shock.py  test_phase_ai_debate21_fixes.py  test_phase_ak_grid_convergence.py  test_phase_an_cross_device.py  test_phase_aq_lp_diagnostic.py  test_phase_ar_crowbar.py  test_phase_as_monte_carlo.py  test_phase_at_windowed_validation.py  test_phase_au_multi_device.py  test_phase_av_pinch_physics.py  test_phase_ax_blind_validation.py  test_phase_ay_vv_diagnostics.py  test_phase_az_validation_convergence.py  test_phase_bc_circuit_calibration.py  test_phase_be_constrained_fc.py  test_phase_bf_fm_constrained.py  test_phase_bj_multidevice_calibration.py  test_phase_bl_third_device_loo.py  test_phase_bp_stratified_loo.py  (+43 more)
tests/baselines/: __init__.py  braginskii_coefficients.json  pf1000_peak_current.json  saha_curve.json  sod_density_profile.json  spitzer_resistivity.json
tools/: launch_dashboard.sh  memory_manager.py  test_dashboard.html  test_dashboard.py  test_status.json  test_status_runner.py
(+141 files in other folders)
