[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dpf-unified"
version = "0.1.0"
description = "Dense Plasma Focus simulator — unified multi-physics code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DPF Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "numba>=0.57",
    "h5py>=3.8",
    "click>=8.0",
    "tqdm>=4.60",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
    "huggingface-hub>=0.16",
]
gpu = [
    "cupy>=12.0",
]
mpi = [
    "mpi4py>=3.1",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "websockets>=11.0",
    "httpx>=0.24",
]

[project.scripts]
dpf = "dpf.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line too long (handled by line-length)
    "N802",   # Function name should be lowercase — physics names (max_div_B, etc.)
    "N803",   # Argument name should be lowercase — physics variables (B, Te, Lp, etc.)
    "N806",   # Variable in function should be lowercase — physics variables
    "N815",   # Variable in class scope mixedCase — physics variables (dL_dt, etc.)
    "N816",   # Variable in global scope mixedCase — physics constants (k_B, eV)
    "SIM108", # Use ternary operator — readability preference
    "B027",   # Empty method in ABC without abstract decorator — intentional default
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
